discussion/kv_engine/175088/175088_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config interface char* to const std::string&

Change-Id: I46b9b7200b9c9850f2a50f49ab0791b52a63d980

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-23 12:35:27.000000000
Message: 
Patch Set 9: Patch Set 8 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 12:38:00.000000000
Message: 
Patch Set 9:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-05-23 12:42:27.000000000
Message: 
Patch Set 9: Code-Review-1

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 12:45:59.000000000
Message: 
Patch Set 9:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-05-23 12:49:59.000000000
Message: 
Patch Set 9:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-05-23 13:01:00.000000000
Message: 
Patch Set 9: Code-Review+1

(2 comments)
Line:88, utilities/config_parser.cc -> It's certainly an incremental improvement on the existing code, but I think this is a somewhat halfway-house change - you're passing std::string objects, but still parsing as a C-style null-terminated string - technically a std::string can contain null in the middle of it so that's an extra (implicit) constraint you're adding to the std::string used here.

Given the work on this patch is already done it makes sense to merge it in, but I think we should try to minimise any C++ modernisation patches unless there's an explicit Elixir-related reason for doing them.

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 13:12:54.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46325/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_xattr.cc(1929): error: Value of: resp.isSuccess()
  Actual: false
Expected: true
Expected to be able to store system xattrs
[  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (177 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46325/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17668/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_server.cc:128:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[],
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17668/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27843/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
[2022-05-23T13:04:44.200Z] unknown file: Failure
[2022-05-23T13:04:44.200Z] C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCanExceedDocumentLimit_Mcbp_XattrYes_JsonNo_SnappyYes: Temporary failure (134)" thrown in SetUp().
[2022-05-23T13:04:44.200Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (3 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27843/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16694/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38929/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18644/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7280/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19792/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19442/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7381/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20458/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:44:16.000000000
Message: 
Patch Set 9: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46556/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46556/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7505/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7505/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20028/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19684/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19684/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20686/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20686/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28077/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28077/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7609/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18875/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18875/ )
----------------------------------------------------------------------------------------------------------------------
